name:                haskey-util
version:             0.1.0.1
synopsis:            Utility library and executable for inspecting Haskey databases
description:
    Haskey is a transactional, ACID compliant, embeddable, scalable key-value
    store written entirely in Haskell.
    .
    This utility can be used to inspect Haskey databases.
    .
    For more information on how to use this package, visit
    <https://github.com/haskell-haskey/haskey-util>
homepage:            https://github.com/haskell-haskey
license:             BSD3
license-file:        LICENSE
author:              Henri Verroken, Steven Keuchel
maintainer:          steven.keuchel@gmail.com
copyright:           Copyright (c) 2017, Henri Verroken, Steven Keuchel
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules: Database.Haskey.Utils.Analysis.Pages
                 , Database.Haskey.Utils.Analysis.Pages.Draw
                 , Database.Haskey.Utils.Intervals
                 , Database.Haskey.Utils.Intervals.Draw
  other-modules:
  build-depends:
    base          >=4.7  && <5,
    haskey,
    haskey-btree,
    SVGFonts      >=1.5 && <2,
    diagrams      >=1.3 && <2,
    diagrams-lib  >=1.3 && <2,
    diagrams-svg  >=1.3 && <2,
    lens          >=4.10 && <5,
    mtl           >=2.1  && <3,
    stm           >=2.1  && <3

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src

executable haskey-util
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    base          >= 4.7 && <5,
    haskey,
    haskey-btree,
    haskey-util,
    bytestring    >=0.6 && <0.9 || >0.9 && <1,
    diagrams-svg  >=1.3 && <2,
    random        >=1.1 && <2

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-haskey/haskey-util
